--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
     "type": "library",
     "require":{
         "php": ">=5.3.0"
-    }
+    },
+    "autoload": {
+        "psr-0": { "Fp\\OpenIdBundle": "" }
+    },
 }
