--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": { "Fp\\OpenIdBundle": "" }
+        "psr-0": { "Bundle\\PaymentGatewayBundle": "" }
     },
 }
